[1-create-api-for-all-tabs] adding publication api from library tab
